[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tutor-mfe-npm-auth"
version = "0.1.7"
description = "Inject private npm registry auth into Tutor MFE builds"
requires-python = ">=3.8"
dependencies = ["tutor>=20,<21"]

[project.entry-points."tutor.plugin.v1"]
mfe_npm_auth = "tutor_mfe_npm_auth.plugin"

